# adventofcode

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
2024/day01/: README.md
2024/day02/: README.md
2024/day03/: README.md
2024/day04/: README.md
2024/day05/: README.md
2024/day06/: README.md
2024/day07/: README.md
2024/day08/: README.md
2024/day09/: README.md
2024/day10/: README.md
2024/day11/: README.md
2024/day12/: README.md
2024/day13/: README.md
2024/day14/: README.md
2024/day15/: README.md
2024/day16/: README.md
src/: day.rs.tmpl  lib.rs  main.rs
src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  mod.rs
