[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Alexandre Barone <abalexandrebarone@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.14.0"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
